# scaffer-templates

./: .gitignore  README.md
templates/: setup_py.py
templates/app-fs-forms/: paket.dependencies
templates/app-fs-forms/.paket/: get_paket.py
templates/app-fs-forms/ScfProject/: ScfProject.sln
templates/app-fs-forms/ScfProject/ScfProjectDesign/: ScfProjectDesign.csproj  paket.references
templates/app-fs-forms/ScfProject/ScfProjectMain/: ScfProjectMain.fsproj  paket.references
templates/cf-fargate/: scf_prj_template.yml
templates/cs-lib/: scaffer_init.py
templates/cs-lib/ScfLibname/: Class1.cs  ScfLibname.csproj
templates/cs-protos/ScfPrj/: ScfPrj.csproj
templates/cs-protos/ScfPrj/protos/scf-company/: scf-package.proto
templates/cs-protos/protos/scf-company/: scf-package.proto
templates/cs-sdk/: scf-prj.csproj
templates/cs-tool/: scaffer_init.py
templates/cs-tool/ScfToolname/: Program.cs  ScfToolname.csproj
templates/exe-launcher/rll/: scf-exename.ss
templates/fs-lib/: scaffer_init.py
templates/fs-lib/ScfLibname/: Library.fs  ScfLibname.fsproj
templates/m-scafdir/: scaffer.json
templates/m-scafdir/templates/example1/: hello.txt
templates/paket-init/.paket/: get_paket.py
templates/publishpy/: publish.py
templates/py-app/: scaffer_init.py  setup.py  tasks.py
templates/py-app/test/: test_scflibname.py
templates/py-arg/: scf_app.py
templates/py-setup/: scaffer_init.py  setup.py
templates/py-toml/: pyproject.toml
templates/setup/: scaffer_init.py
templates/tasks/: tasks.py
templates/tasks/extra_tasks/: task_samples.py
